# tegmentum-webfunctions

./: .gitignore  .gitmodules  Cargo.toml  README.md
crates/adjacency_tree/: Cargo.toml
crates/adjacency_tree/src/: lib.rs
crates/agg_sum/: Cargo.toml
crates/array_append/: Cargo.toml
crates/array_contains/: Cargo.toml
crates/array_dedupe/: Cargo.toml
crates/array_equals/: Cargo.toml
crates/array_equals/src/: lib.rs
crates/array_fill/: Cargo.toml
crates/array_fill/src/: lib.rs
crates/array_get/: Cargo.toml
crates/array_get/src/: lib.rs
crates/array_index/: Cargo.toml
crates/array_index/src/: lib.rs
crates/array_of/: Cargo.toml
crates/array_reverse/: Cargo.toml
crates/array_size/: Cargo.toml
crates/array_unique/: Cargo.toml
crates/base64_decode/: Cargo.toml
crates/base64_decode/src/: lib.rs
crates/debug_callback_depth/: Cargo.toml
crates/debug_callback_depth/src/: lib.rs
crates/debug_callback_depth/wit/: webfunction.wit
crates/debug_execute_update/: Cargo.toml
crates/debug_execute_update/src/: bindings.rs  lib.rs
crates/debug_execute_update/wit/: webfunction.wit
crates/emit_csv/: Cargo.toml
crates/emit_json/: Cargo.toml
crates/emit_json/src/: lib.rs
crates/example-count-aggregate/: Cargo.toml
crates/example-count-aggregate/src/: lib.rs
crates/example-graph-callback-extension/: Cargo.toml
crates/example-graph-callback-extension/src/: lib.rs
crates/example-multi-var-filter/: Cargo.toml
crates/example-multi-var-filter/src/: lib.rs
crates/example-power-set-property/: Cargo.toml
crates/example-power-set-property/src/: lib.rs
crates/example-sum-aggregate/: Cargo.toml
crates/example-sum-aggregate/src/: lib.rs
crates/example-uppercase-extension/: Cargo.toml
crates/example-uppercase-extension/src/: lib.rs
crates/hash_blake2b/: Cargo.toml
crates/hash_blake2b/src/: lib.rs
crates/hash_blake2b_256/: Cargo.toml
crates/hash_blake2b_512/: Cargo.toml
crates/hash_blake2b_512/src/: lib.rs
crates/hash_fsb/: Cargo.toml
crates/hash_fsb/src/: lib.rs
crates/hash_gost94/: Cargo.toml
crates/hash_gost94/src/: lib.rs
crates/hash_groestl/: Cargo.toml
crates/hash_groestl/src/: lib.rs
crates/hash_k12/: Cargo.toml
crates/hash_k12/src/: lib.rs
crates/hash_md2/: Cargo.toml
crates/hash_md2/src/: lib.rs
crates/hash_md4/: Cargo.toml
crates/hash_md4/src/: lib.rs
crates/hash_md5/: Cargo.toml
crates/hash_md5/src/: lib.rs
crates/hash_ripemd160/: Cargo.toml
crates/hash_ripemd160/src/: lib.rs
crates/hash_sha1/: Cargo.toml
crates/hash_sha1/src/: lib.rs
crates/hash_sha256/: Cargo.toml
crates/hash_sha384/: Cargo.toml
crates/hash_sha384/src/: lib.rs
crates/hash_sha3_256/: Cargo.toml
crates/hash_sha3_256/src/: lib.rs
crates/hash_sha512/: Cargo.toml
crates/hash_sha512/src/: lib.rs
crates/hash_sha512/wit/: webfunction.wit
crates/hash_shabal/: Cargo.toml
crates/hash_sm3/: Cargo.toml
crates/hash_streebog/: Cargo.toml
crates/hash_tiger/: Cargo.toml
crates/hash_whirlpool/: Cargo.toml
crates/jmespath_search/: Cargo.toml
crates/json_path/: Cargo.toml
crates/math_absolute/: Cargo.toml
crates/math_arccosine/: Cargo.toml
crates/math_arcsine/: Cargo.toml
crates/math_arctan/: Cargo.toml
crates/math_ceiling/: Cargo.toml
crates/math_const_e/: Cargo.toml
crates/math_const_frac_1_pi/: Cargo.toml
crates/math_const_frac_1_sqrt_2/: Cargo.toml
crates/math_const_frac_2_pi/: Cargo.toml
crates/math_const_frac_2_sqrt_pi/: Cargo.toml
crates/math_const_frac_pi_2/: Cargo.toml
crates/math_const_frac_pi_3/: Cargo.toml
crates/math_const_frac_pi_4/: Cargo.toml
crates/math_const_frac_pi_6/: Cargo.toml
crates/math_const_frac_pi_8/: Cargo.toml
crates/math_const_ln_10/: Cargo.toml
crates/math_const_ln_2/: Cargo.toml
crates/math_const_log10_2/: Cargo.toml
crates/math_const_log10_e/: Cargo.toml
crates/math_const_log2_10/: Cargo.toml
crates/math_const_log2_e/: Cargo.toml
crates/math_const_pi/: Cargo.toml
crates/math_const_sqrt_2/: Cargo.toml
crates/math_const_tau/: Cargo.toml
crates/math_cosine/: Cargo.toml
crates/math_covariance/: Cargo.toml
crates/math_div/: Cargo.toml
crates/math_exponent/: Cargo.toml
crates/math_floor/: Cargo.toml
crates/math_log/: Cargo.toml
crates/math_log10/: Cargo.toml
crates/math_maximum/: Cargo.toml
crates/math_mean/: Cargo.toml
crates/math_median/: Cargo.toml
crates/math_minimum/: Cargo.toml
crates/math_minus/: Cargo.toml
crates/math_modulo/: Cargo.toml
crates/math_mult/: Cargo.toml
crates/math_pearson_r/: Cargo.toml
crates/math_plus/: Cargo.toml
crates/math_power/: Cargo.toml
crates/math_round/: Cargo.toml
crates/math_sine/: Cargo.toml
crates/math_sqrt/: Cargo.toml
crates/math_square_root/: Cargo.toml
crates/math_std_dev/: Cargo.toml
crates/math_sum_arrays/: Cargo.toml
crates/math_tangent/: Cargo.toml
crates/math_truncate/: Cargo.toml
crates/nest_by/: Cargo.toml
crates/nest_hierarchy/: Cargo.toml
crates/parse_csv/: Cargo.toml
crates/parse_json/: Cargo.toml
crates/parse_xml/: Cargo.toml
crates/similarity_damerau_levenshtein/: Cargo.toml
crates/similarity_hamming/: Cargo.toml
crates/similarity_jaro/: Cargo.toml
crates/similarity_jaro_winkler/: Cargo.toml
crates/similarity_levenshtein/: Cargo.toml
crates/similarity_normalized_damerau_levenshtein/: Cargo.toml
crates/similarity_normalized_levenshtein/: Cargo.toml
crates/similarity_osa_distance/: Cargo.toml
crates/similarity_sorensen_dice/: Cargo.toml
crates/sirix_commit_hook_logger/: Cargo.toml
crates/sirix_shredder_uppercase/: Cargo.toml
crates/sirix_udf_hello/: Cargo.toml
crates/string_case_camel_case/: Cargo.toml
crates/string_case_capitalize/: Cargo.toml
crates/string_case_decapitalize/: Cargo.toml
crates/string_case_kebab_case/: Cargo.toml
crates/string_case_lower_case/: Cargo.toml
crates/string_case_lower_first/: Cargo.toml
crates/string_case_pascal_case/: Cargo.toml
crates/string_case_shouty_kebab_case/: Cargo.toml
docs/: wf_sql-retirement.md
portability/: pom.xml
(+295 files in other folders)
