# Cargo workspace for the tegmentum WebAssembly component standard library.
# Each crate is a single-function wasm component (built via cargo component).
# All crates share the WIT world at shared/wit/webfunction.wit.

[workspace]
members = [
    "crates/agg_sum",
    "crates/array_append",
    "crates/array_contains",
    "crates/array_dedupe",
    "crates/array_equals",
    "crates/array_fill",
    "crates/array_get",
    "crates/array_index",
    "crates/array_of",
    "crates/array_reverse",
    "crates/array_size",
    "crates/array_unique",
    "crates/base64_decode",
    "crates/emit_csv",
    "crates/emit_json",
    "crates/hash_blake2b",
    "crates/hash_blake2b_256",
    "crates/hash_blake2b_512",
    "crates/hash_fsb",
    "crates/hash_gost94",
    "crates/hash_groestl",
    "crates/hash_k12",
    "crates/hash_md2",
    "crates/hash_md4",
    "crates/hash_md5",
    "crates/hash_ripemd160",
    "crates/hash_sha1",
    "crates/hash_sha256",
    "crates/hash_sha3_256",
    "crates/hash_sha384",
    "crates/hash_sha512",
    "crates/hash_shabal",
    "crates/hash_sm3",
    "crates/hash_streebog",
    "crates/hash_tiger",
    "crates/hash_whirlpool",
    "crates/jmespath_search",
    "crates/json_path",
    "crates/math_absolute",
    "crates/math_arccosine",
    "crates/math_arcsine",
    "crates/math_arctan",
    "crates/math_ceiling",
    "crates/math_const_e",
    "crates/math_const_frac_1_pi",
    "crates/math_const_frac_1_sqrt_2",
    "crates/math_const_frac_2_pi",
    "crates/math_const_frac_2_sqrt_pi",
    "crates/math_const_frac_pi_2",
    "crates/math_const_frac_pi_3",
    "crates/math_const_frac_pi_4",
    "crates/math_const_frac_pi_6",
    "crates/math_const_frac_pi_8",
    "crates/math_const_ln_10",
    "crates/math_const_ln_2",
    "crates/math_const_log10_2",
    "crates/math_const_log10_e",
    "crates/math_const_log2_10",
    "crates/math_const_log2_e",
    "crates/math_const_pi",
    "crates/math_const_sqrt_2",
    "crates/math_const_tau",
    "crates/math_cosine",
    "crates/math_covariance",
    "crates/math_div",
    "crates/math_exponent",
    "crates/math_floor",
    "crates/math_log",
    "crates/math_log10",
    "crates/math_maximum",
    "crates/math_mean",
    "crates/math_median",
    "crates/math_minimum",
    "crates/math_minus",
    "crates/math_modulo",
    "crates/math_mult",
    "crates/math_pearson_r",
    "crates/math_plus",
    "crates/math_power",
    "crates/math_round",
    "crates/math_sine",
    "crates/math_sqrt",
    "crates/math_square_root",
    "crates/math_std_dev",
    "crates/math_sum_arrays",
    "crates/math_tangent",
    "crates/math_truncate",
    "crates/parse_csv",
    "crates/parse_json",
    "crates/parse_xml",
    "crates/similarity_damerau_levenshtein",
    "crates/similarity_hamming",
    "crates/similarity_jaro",
    "crates/similarity_jaro_winkler",
    "crates/similarity_levenshtein",
    "crates/similarity_normalized_damerau_levenshtein",
    "crates/similarity_normalized_levenshtein",
    "crates/similarity_osa_distance",
    "crates/similarity_sorensen_dice",
    "crates/string_case_camel_case",
    "crates/string_case_capitalize",
    "crates/string_case_decapitalize",
    "crates/string_case_kebab_case",
    "crates/string_case_lower_case",
    "crates/string_case_lower_first",
    "crates/string_case_pascal_case",
    "crates/string_case_shouty_kebab_case",
    "crates/string_case_shouty_snake_case",
    "crates/string_case_snake_case",
    "crates/string_case_swap_case",
    "crates/string_case_title_case",
    "crates/string_case_train_case",
    "crates/string_case_upper_first",
    "crates/string_count",
    "crates/string_count_graphemes",
    "crates/string_count_substrings",
    "crates/string_count_unique_words",
    "crates/string_count_where",
    "crates/string_count_words",
    "crates/string_levenshtein",
    "crates/string_split_chars",
    "crates/string_swap_case",
    "crates/string_title_case",
    "crates/string_train_case",
    "crates/string_upper",
    "crates/string_upper_first",
    "crates/nest_by",
    "crates/nest_hierarchy",
    "crates/wf_tree",
    "crates/wf_tree_fast",
    "crates/wf_tree_rows",
    "crates/adjacency_tree",
    "crates/debug_callback_depth",
    "crates/debug_execute_update",
    "crates/webassembly_wat",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
wit-bindgen = "0.36"
