[package]
name = "adjacency_tree"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen.workspace = true

[package.metadata.component]
package = "tegmentum:adjacency-tree"

[package.metadata.component.target]
path = "wit"
world = "webfunction"
