[package]
name = "array_equals"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen.workspace = true
serde_json = "1.0"

[package.metadata.component]
package = "tegmentum:array-equals"

[package.metadata.component.target]
path = "wit"
world = "webfunction"
