[package]
name = "array_index"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen.workspace = true
serde_json = "1.0"

[package.metadata.component]
package = "tegmentum:array-index"

[package.metadata.component.target]
path = "wit"
world = "webfunction"
