[package]
name = "base64_decode"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen.workspace = true
base64 = { version = "0.22", default-features = false, features = ["alloc"] }

[package.metadata.component]
package = "tegmentum:base64-decode"

[package.metadata.component.target]
path = "wit"
world = "webfunction"
