[package]
name = "base64_decode"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { version = "0.44", features = ["bitflags"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }

[package.metadata.component]
package = "tegmentum:webfunction"
[package.metadata.component.target]
path = "../../wit"
world = "sparql-extension"