[package]
name = "debug_callback_depth"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen.workspace = true

[package.metadata.component]
package = "tegmentum:debug-callback-depth"

[package.metadata.component.target]
path = "wit"
world = "webfunction"
