[package]
name = "debug_callback_depth"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { version = "0.44", features = ["bitflags"] }

[package.metadata.component]
package = "tegmentum:webfunction"

[package.metadata.component.target]
path = "../../wit"
world = "extension-with-all-host-callbacks"
