[package]
name = "debug_execute_update"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen.workspace = true

[package.metadata.component]
package = "tegmentum:debug-execute-update"

[package.metadata.component.target]
path = "wit"
world = "webfunction"
