[package]
name = "emit_json"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen.workspace = true
serde_json = { version = "1.0", features = ["preserve_order"] }

[package.metadata.component]
package = "tegmentum:emit-json"

[package.metadata.component.target]
path = "wit"
world = "webfunction"
