[package]
name = "emit_json"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { version = "0.44", features = ["bitflags"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

[package.metadata.component]
package = "tegmentum:webfunction"

[package.metadata.component.target]
path = "../../wit"
world = "sparql-extension"
