[package]
name = "hash_blake2b"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen.workspace = true
blake2 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[package.metadata.component]
package = "tegmentum:hash-blake2b"

[package.metadata.component.target]
path = "wit"
world = "webfunction"
