[package]
name = "hash_groestl"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen.workspace = true
groestl = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
digest = { version = "0.10", default-features = false }

[package.metadata.component]
package = "tegmentum:hash-groestl"

[package.metadata.component.target]
path = "wit"
world = "webfunction"
