[package]
name = "hash_k12"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen.workspace = true
k12 = { version = "0.3", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[package.metadata.component]
package = "tegmentum:hash-k12"

[package.metadata.component.target]
path = "wit"
world = "webfunction"
