[package]
name = "hash_ripemd160"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen.workspace = true
ripemd = { version = "0.1", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[package.metadata.component]
package = "tegmentum:hash-ripemd160"

[package.metadata.component.target]
path = "wit"
world = "webfunction"
